--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,16 @@
-; EditorConfig file: https://EditorConfig.org
-; Install the "EditorConfig" plugin into your editor to use
-
+# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
-insert_final_newline = true
 indent_style = space
 indent_size = 4
+insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.json]
+[*.{json,yml}]
 indent_size = 2
+max_line_length = off
+
+[*.md]
+max_line_length = off
