--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     ]
   },
   "scripts": {
-    "lint": "eslint .",
-    "test": "nyc --report-dir ./artifacts/coverage mocha --color true",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "build": "tsc -p tsconfig.build.json",
+    "prebuild": "rimraf dist",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "repository": {
     "type": "git",
@@ -26,18 +29,49 @@
   "keywords": [
     "badge"
   ],
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "author": "Steve Hair <me@stevenhair.com>",
   "devDependencies": {
-    "chai": "^4.2.0",
+    "@types/dot": "^1.1.5",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.50.0",
-    "mocha": "^10.2.0",
-    "nyc": "^15.0.0",
-    "sinon": "^16.0.0"
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-unicorn": "^48.0.1",
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
+    "sinon": "^16.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "css-color-names": "~1.0.1",
     "dot": "^1.1.3",
     "svgo": "^3.0.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "modulePaths": [
+      "<rootDir>"
+    ],
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.ts"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node",
+    "maxWorkers": 1
   }
 }
