--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run coverage
+      - run: npm run test:coverage
       - run: npm run lint
       - name: Codecov
         uses: codecov/codecov-action@v3.1.4
