--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tsc -p tsconfig.build.json",
     "prebuild": "rimraf dist",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src"
