--- a/package.json
+++ b/package.json
@@ -34,18 +34,24 @@
   "license": "MIT",
   "author": "Steve Hair <me@stevenhair.com>",
   "devDependencies": {
+    "@eslint/compat": "^1.2.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
+    "@stylistic/eslint-plugin-ts": "^2.9.0",
     "@types/dot": "^1.1.5",
     "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.2",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.50.0",
+    "@types/node": "^22.7.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^9.12.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-unicorn": "^53.0.0",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "globals": "^15.10.0",
     "jest": "^29.7.0",
-    "rimraf": "^5.0.5",
-    "sinon": "^17.0.1",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
