--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       - run: npm run build --if-present
       - run: npm run test:coverage
       - run: npm run lint
-        if: ${{ matrix.node-version != 18.x }}
+        if: ${{ matrix.node-version != '18.x' }}
       - name: Codecov
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
